Support followers-only reposts
